welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:17: error: unclosed character literal
      return 'coucou'
                    ^max2Value:17: error: ';' expected but something found.
      return 'coucou'
                    ^